--- a/public/js/components/blog/blogItem/blogItem.html
+++ b/public/js/components/blog/blogItem/blogItem.html
@@ -5,19 +5,30 @@
     
         <!-- In general if it's not editable it's when this component is used in the blogList component -->
         <div class="card-content">
+
             <!-- Display post.title if this component is not editable or editable and not in edit mode -->
             <span class="card-title" ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
               {{$ctrl.post.title}}
             </span>
             <!-- Display input for editing post.title only if editable and in edit mode -->
             <input type="text" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.title" placeholder="Title">
+
+
+            <span class="card-date" ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
+               {{$ctrl.post.publishedAt}}
+            </span>
+
+            <label for="card-date" ng-if="($ctrl.editable && $ctrl.editMode)">Date de publication (Format JJ-MM-AAAA)</label>
+            <input name="card-date" type="date" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.date" placeholder="Date">
+
             <!-- Display post.content if this component is not editable or editable and not in edit mode -->
             <div ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
                 {{$ctrl.post.content | limitTo: ($ctrl.editable ? $ctrl.post.content.length : 110)}}
             </div>
             <!-- Display textarea for editing post.content only if editable and in edit mode -->
             <textarea class="materialize-textarea" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.content" placeholder="Content"></textarea>
-        </div>
+        
+         </div>
 
         <div class="card-action">
             <!-- Display this link, only if it's not editable, to change state to blog.item with the post id -->
