Ajout d'une option pour render les \n dans le content

--- a/public/js/components/blog/blogItem/blogItem.html
+++ b/public/js/components/blog/blogItem/blogItem.html
@@ -17,9 +17,9 @@
                {{$ctrl.post.publishedAt}}
             </span>
 
-            <div>
+            <p style="white-space: pre;">
                {{$ctrl.post.content | limitTo: ($ctrl.editable ? $ctrl.post.content.length : 110)}}
-            </div>
+            </p>
          </div>
 
          <!-- Otherwise, edit -->
