--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -83,3 +83,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
     color: $primary;
 }
+
+.lineReturns {
+   white-space: pre;
+}
